--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
 user=developer
 password=joaoand1
-dburl=jdbc:mysql://localhost:3306/coursejdbc?allowPublicKeyRetrieval&useSSL=false
+dburl=jdbc:mysql://localhost:3306/coursejdbc?allowPublicKeyRetrieval=true&useSSL=false
 useSSL=false
